deleting wrong names in file

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div id="main" class="grid-1">
         <div><h1>Mark Heckmann's github repos</h1></div>
         <p>This is an index to my open source repos on github</p>
-        <p>Page based on <a href="http://hadley.github.com/">http://hadley.github.com/</a></p>
+        <p>Page based on <a href="http://markheckmann.github.com/">http://markheckmann.github.com/</a></p>
 
       </div>
 
@@ -126,7 +126,7 @@
             <a href="https://github.com/markheckmann/repositories"><span id="num-repos">&nbsp;</span> public repos</a>
             <br>
           </p>
-          <p class="email"><a href="mailto:heckmann@uni-bremen.de">hadley@rice.edu</a></p>
+          <p class="email"><a href="mailto:heckmann@uni-bremen.de">heckmann@uni-bremen.de</a></p>
         </div>
 
         <div id="recently-updated" class="grid-2 omega header">
