--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div id="main" class="grid-1">
         <div><h1>Mark Heckmann's github repos</h1></div>
         <p>This is an index to my open source repos on github</p>
-        <p>Page based on <a href="http://markheckmann.github.com/">http://markheckmann.github.com/</a></p>
+        <p>Page based on <a href="http://hadley.github.com/">http://hadley.github.com/</a></p>
 
       </div>
 
