adding my website

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div><h1>Mark Heckmann's github repos</h1></div>
         <p>This is an index to my open source repos on github</p>
         <p>Page based on <a href="http://hadley.github.com/">http://hadley.github.com/</a></p>
-
+        <p>Visit my website <a href="http://www.markheckmann.de/">www.markheckmann.de</a></p> 
       </div>
 
       <div class="grid grid-3">
